tests/src/frontend/typechecking/invalid/concrete_tuple_void.sk
fun foo(): void {
  t = (42, 42);
  _ = Array[t, void]
}
